--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
 
-    <title>platzi conf hawai</title>
+    <title>conf hawai</title>
   </head>
 
 
@@ -18,9 +18,9 @@
      <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="assets/images/platzi-logo.png" alt="platzi logo"> confHawai
+            <h1>🚀</h1> 
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -67,7 +67,7 @@
             <div class="contaier">
               <div class="row align-items-center">
                 <div class="col-md-6  offset-md-6 text-center text-md-right">
-                  <h1>Platzi conf hawai</h1>
+                  <h1>Conf Hawai</h1>
                   <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, voluptatem! Sed voluptates unde doloremque laudantium dolor totam, neque ipsam asperiores esse cum eveniet? Ducimus odio veritatis debitis ut illo iure!</p>
                   <a href="#" class="btn btn-outline-light"> Quiero ser un orador</a>
                   <button type="button" class="btn btn-plazi" data-bs-toggle="modal" data-bs-target="#Modal-compra">Comprar tickets</button>
@@ -82,16 +82,16 @@
 
 
      <!--Speaker -->
-     <section id="speakers" class="mt-4">
-       <div class="container">
+     <section id="speakers" class=" tt">
+       <div class="container ">
          <div class="row ">
-           <div class="col text-center text-uppercase">
+           <div class="col mt-4 text-center text-uppercase">
              <small>Conoce a los</small>
              <h2>Oradores</h2>
            </div>
          </div>
          <div class="row">
-           <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+           <div class="col-sm-12 col-md-6 col-lg-4 mb-4 ">
             <div class="card" >
               <img src="assets/Speakers/sacha.jpg" class="card-img-top" alt="Foto de sacha">
               <div class="card-body">
@@ -149,16 +149,17 @@
 
      <!--Lugar y fecha -->
      <section id="place-time">
-       <div class="container-fluid">
-         <div class="row">
-           <div class="col-12 col-lg-6 ps-0 pe-0">
+       <div class="container-fluid ">
+         <div class="row justify-content-md-center">
+           <div class="col-12 col-lg-6 ps-0 pe-0 ">
              <img src="assets/images/honolulu.jpg" alt="Ciudad de honolulu">
            </div>
-           <div class="col-12 col-lg-6 pt-2 pb-4">
-            <h2>Honolulu - Octubre 2025</h2>
-            <p>Honolulu o Honolulú es la capital y localidad más grande del 		estado de Hawái, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la isla (aproximadamente 600 km² de superficie).
+           <div class="col-12 col-lg-6 pt-2 pb-4 position-relative">
+            <h2  class="text-center mt-4 " >Honolulu - 03/06/2025</h2>
+            
+            <p class="text-center  d-md-block mt-5 mb-5">Honolulu o Honolulú es la capital y localidad más grande del 		estado de Hawái, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la isla (aproximadamente 600 km² de superficie).
             </p>
-            <a class="btn btn-outline-light" href="https://es.wikipedia.org/wiki/Honolulu">Conoce mas</a>
+            <a class="btn btn-outline-light align-items-center mb-1 mt-4 d-block w-center " href="https://es.wikipedia.org/wiki/Honolulu">Conoce mas</a>
            </div>
          </div>
        </div>
@@ -167,7 +168,7 @@
 
 
      <!--Coniertete en orador -->
-     <section id="conviertete-en-orador" class="pt-2 pb-2">
+     <section id="conviertete-en-orador" class="pt-2 pb-2 tt">
        <div class="container">
          <div class="row">
            <div class="col  text-uppercase text-center">
@@ -183,17 +184,17 @@
          <div class="row">
            <div class="col">
             <form>
-              <div class="form row">
+              <div class="form row ">
                   <div class="mb-3 form-group col-12 col-md-6">
-                      <input type="text" class="form-control" placeholder="Nombre">
+                      <input type="text" class="form-control tt Color-text" placeholder="Nombre">
                   </div>
                   <div class="mb-3 col-12 col-md-6">
-                      <input type="text" class="form-control" placeholder="Apellido">
+                      <input type="text" class="form-control tt Color-text" placeholder="Apellido">
                   </div>
               </div>
               <div class="form row">
                   <div class="mb-3 col">
-                      <textarea name="text" class="form-control form-control-lg" placeholder="Sobre que quieres hablar?"></textarea>
+                      <textarea name="text" class="form-control form-control-lg tt Color-text" placeholder="Sobre que quieres hablar?"></textarea>
                       <small class="form-text text-muted">
                           Recuerda incluir un titulo para tu charla
                       </small>
